--- a/configs/cloud_cc.yml
+++ b/configs/cloud_cc.yml
@@ -8,5 +8,5 @@ nacos:
   contextPath: "/nacos"     # path
   namespaceID: "3454d2b5-2455-4d0e-bf6d-e033b086bb4c" # namespace id
   group: "dev"                    # group name: dev, prod, test
-  dataID: "frame.yml"  # config file id
+  dataID: "cloud.yml"  # config file id
   format: "yaml"                 # configuration file type: json,yaml,toml
